--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,8 @@ platform :ios, '10.0'
 
 target 'test_video_record_2' do
   config = use_native_modules!
-
+  pod 'iOS-Client-SDK', :git => 'https://github.com/Ziggeo/iOS-Client-SDK.git'
+  pod 'ZiggeoSwiftSDK', :git => 'https://github.com/Ziggeo/Swift-Client-SDK.git'
   use_react_native!(:path => config["reactNativePath"])
 
   target 'test_video_record_2Tests' do
